/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/protosigverifierservice";

package protosigverifierservice;

import "api/protoblocktx/block_tx.proto";
import "api/protocoordinatorservice/coordinator.proto";

service Verifier {
    rpc StartStream(stream Batch) returns (stream ResponseBatch);
}

message Batch {
    optional Update update = 1;
    repeated Tx requests = 2;
}

message Update {
    optional protoblocktx.ConfigTransaction config = 1;
    optional protoblocktx.NamespacePolicies namespace_policies = 2;
}

message Tx {
    protocoordinatorservice.TxRef ref = 1;
    protoblocktx.Tx tx = 2;
}

message Response {
    protocoordinatorservice.TxRef ref = 1;
    protoblocktx.Status status = 2;
}

message ResponseBatch {
    repeated Response responses = 1;
}
