/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/servicepb";

package servicepb;

import "google/protobuf/empty.proto";

import "api/committerpb/block_tx.proto";
import "api/committerpb/status.proto";
import "api/committerpb/ref.proto";
import "api/committerpb/config.proto";

import "api/servicepb/common.proto";


service ValidationAndCommitService {
  rpc StartValidateAndCommitStream (stream VcBatch) returns (stream committerpb.TxStatusBatch);
  rpc SetLastCommittedBlockNumber (committerpb.BlockRef) returns (google.protobuf.Empty) {};
  rpc GetLastCommittedBlockNumber (google.protobuf.Empty) returns (LastCommittedBlock) {};
  rpc GetTransactionsStatus (committerpb.TxIDsBatch) returns (committerpb.TxStatusBatch) {};
  rpc GetNamespacePolicies(google.protobuf.Empty) returns (committerpb.NamespacePolicies) {};
  rpc GetConfigTransaction(google.protobuf.Empty) returns (committerpb.ConfigTransaction) {};
  rpc SetupSystemTablesAndNamespaces(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

message VcBatch {
  repeated VcTx transactions = 1;
}

message VcTx {
  committerpb.TxRef ref = 1;
  repeated committerpb.TxNamespace namespaces = 2;
  optional committerpb.Status prelim_invalid_tx_status = 3;
}
